force-app/main/default/objects/ssot__RequiredProduct__dlm/fields/ssot__rel_1710432596743_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1710432596743_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequiredProduct_RelatedToId_map_Work_rel</label>
    <referenceTo>ssot__WorkType__dlm</referenceTo>
    <relationshipLabel>RequiredProduct_RelatedToId_map_Work_rel</relationshipLabel>
    <relationshipName>rel_1710432596743_end</relationshipName>
    <type>Lookup</type>
</CustomField>