force-app/main/default/objects/ssot__RequiredProduct__dlm/fields/ssot__rel_1716970877716_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716970877716_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequiredProduct_ProductId_map_Produc_rel</label>
    <referenceTo>ssot__Product__dlm</referenceTo>
    <relationshipLabel>RequiredProduct_ProductId_map_Produc_rel</relationshipLabel>
    <relationshipName>rel_1716970877716_end</relationshipName>
    <type>Lookup</type>
</CustomField>