force-app/main/default/objects/ssot__RequiredProduct__dlm/fields/ssot__RequiredProductNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequiredProductNumber__c</fullName>
    <label>Required Product Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequiredProductNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>