force-app/main/default/objects/ssot__RequiredProduct__dlm/fields/ssot__RequiredQuantity__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequiredQuantity__c</fullName>
    <label>Required Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequiredQuantity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>